# crow-plattform

./: .gitignore  B10_1_VERIFICATION.json  B1_2_VERIFICATION.json  B2_VERIFICATION.json  B5_DEMO.py  B5_VERIFICATION.json  B7_1_VERIFICATION.json  B8_1_VERIFICATION.json  B8_2_RULES.json  B8_2_VERIFICATION.json  B8_3_PROFILE.json  B8_4_VERIFICATION.json  B9_2_VERIFICATION.json  BUILDING_GRAPH_RC1.md  BUILDING_GRAPH_RC1_SPRINT1.md  CAD_TEXT_PASS21_VERIFICATION.json  CHANGELOG.md  CHANGELOG_BUILDING_GRAPH_RC1.md  CHANGELOG_VENT_0.2.md  CROW_VENT_0.3.md  CROW_VENT_RELEASE.md  D1_VERIFICATION.json  GEOMETRY_FRAMEWORK_RC1.json  GRAPH_RULE_ENGINE_PASS18_VERIFICATION.json  LÄSMIG.md  MANIFEST.in  PASS41_VERIFICATION.json  PASS6_VERIFICATION.json  README.md  REASONING_ENGINE_RC1_SPRINT4.md  RELEASE_BUILDING_GRAPH_RC1_S1.json  TODO.md  V0_7_0A1_RC_READINESS_2026-07-20.json  V0_7_0A1_VERIFICATION.json  WORKBENCH_BETA.json  crow-accepted-claims.json  crow-adjustments.json  crow-commercial-adjustments.json  crow-commercial-impacts.json  crow-commercial-review.json  (+18 more)
docs/: AUDIT_AND_REVISION.md  BATCH_PIPELINE.md  CONSTITUTION.md  DECISION_GRAPH.md  DECISION_PIPELINE.md  DOMAIN_HANDBOOK.md  FUTURE_MODULES.md  INFERENCE_ENGINE_RC1_SPRINT1.md  MIGRATION_POLICY.md  MODULE_CERTIFICATION.md  (+22 more)
modules/crow-vent-module/: pyproject.toml
modules/crow-vent-module/src/crow_vent_module/: __init__.py  plugin.py
modules/crow-vent-module/src/crow_vent_module.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/crow-vent-module/tests/: test_module_contract.py
(+621 files in other folders)
